# gharplan

./: .env.example  .gitignore  README.md  docker-compose.yml  fix_materials.js  fix_materials_components.js  modify.py  package-lock.json  package.json  update_cad.py  update_cad_btn.py  update_elev.py  update_elev_win.py  vercel.json
engine/: Dockerfile  pyproject.toml  render.yaml  requirements.txt
engine/app/: __init__.py  config.py  main.py
engine/app/data/: __init__.py  tirupati_layouts.json
engine/app/exporters/: __init__.py  dxf.py  ifc.py  patch_pdf.py  pdf.py  xlsx.py
engine/app/generator/: __init__.py  designer.py  designer_main.py  scaler.py  templates.py
engine/app/models/: __init__.py  base.py  boq.py  enums.py  export.py  plan.py  reports.py
engine/app/routers/: boq.py  code.py  export.py  generate.py  layouts.py  structural.py  validate.py  vastu.py
engine/app/services/: __init__.py  autonomous_loop.py  boq_service.py  cad_geom.py  climate_service.py  code_service.py  design_narrative_service.py  elevations.py  geometry.py  mep_model.py  (+11 more)
engine/scripts/: _quality_probe.py  build_rates.py  build_templates.py  export_schema.py
engine/tests/: conftest.py  test_api.py  test_boq_fixture.py  test_boq_synthetic.py  test_code.py  test_designer.py  test_drawing_exports.py  test_exports.py  test_generator.py  test_geometry.py  test_ifc.py  test_mep.py  test_money.py  test_multifloor.py  test_plan_service.py  test_polygon_plots.py  test_refine.py  test_rulepacks.py  test_scenarios.py  test_seed.py  test_structural.py  test_vastu.py  test_zones.py
(+145 files in other folders)
