[project]
name = "gharplan-engine"
version = "1.0.0"
description = "GharPlan compute engine — Vastu, building-code & BOQ-from-geometry."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
